Slideshow flicker prevention

--- a/CSS/homestyle.css
+++ b/CSS/homestyle.css
@@ -45,6 +45,12 @@ header { /* In home page, this is the slideshow, not header. */
 
 .slideshow {
 	position: absolute;
+	/* Backgroun identical to slide start frame to prevent flicker when slide resets */
+	background: url("/img/home_slide.png");
+	background-size: cover;
+	-webkit-background-size: cover;
+	-o-background-size: cover;
+	-moz-background-size: cover;
 	left: 0;
 	top: 0;
 	height: 100%;
